# VaR-Estimation

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: sample_data.csv
include/: backtesting.h  csv_parser.h  delta_var.h  historical_var.h  kernel_var.h  monte_carlo_var.h  parametric_var.h  var_calculator.h
src/: backtesting.cpp  csv_parser.cpp  delta_var.cpp  historical_var.cpp  kernel_var.cpp  main.cpp  monte_carlo_var.cpp  parametric_var.cpp  var_calculator.cpp
tests/: test_var.cpp
